###### TWE 5.2-1 RELEASED ######
2015-06-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Improved support to TXWToolAgent

2015-06-03 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - BeanShell and JavaScript tool agent are now allowed to use any process variable

2015-06-02 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - BeanShell and JavaScript tool agent are now allowed to have FormalParameter "Script" which is used to define script to execute in the case extended attributes "AppName" or "Script" are not defined

2015-05-27 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - supported new (I18n related) extended attributes: 
         * I18N_XPDL_FOLDER_NAME (Package level), 
         * I18N_PROCESS_DEFINITION_FILE_NAME (WorkflowProcess level), 
         * I18N_NAME_TRANSLATION_KEY and I18N_DESCRIPTION_TRANSLATION_KEY (Package, WorkflowProcess, Activity and DataField level)
      - supported new variable i18n_lang_code which is now represented as Package/Workflow process attribute
      - some changes in SharkPackageValidator API method signatures
      
2015-05-24 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - supported changes in SOAPToolAgent
      - supported new TXWToolAgent

2015-05-22 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
   	- supported changes in SOAPToolAgent

2015-05-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
   	- changed names of some constants

2015-05-09 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Supported new activity extended attribute "FORM_PAGE_URL
        This attribute is a reference to XPDL_STRING and specifies the URL location of the form to open to see activity details
      - Support for new system variables
      - Introduced constants for the names/description of the system variables

2015-05-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Added support for ExecuteSql tool agent